refactor: add private methods to improve the code and change to rate as a percentual and not decimal